--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,12 @@ imageio==2.5.0
 Keras==2.2.4
 Pillow==7.2.0
 numpy==1.17.0
-opencv-python==4.1.0.25
-Werkzeug==0.15.5
+opencv-python==4.2.0.34
+Werkzeug==1.0.1
+itsdangerous==1.1.0
 tensorflow==1.14.0
 scipy==1.3.1
-gunicorn==19.0.0
+gunicorn==20.0.4
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+click==7.1.2
